# sams

./: .gitignore  .pre-commit-config.yaml  Cargo.toml  README.md  install.sh  sams.schema.json
.github/workflows/: ci.yml  general.yml
src/: args.rs  config.rs  context.rs  lib.rs  main.rs  template.rs  walk.rs
src/commands/: ask.rs  clone.rs  generate_json_schema.rs  init.rs  install.rs  jsonschema.rs  link.rs  mod.rs  pull.rs  render.rs  sync.rs
